[gd_scene load_steps=17 format=2]

[ext_resource path="res://bg/bg006p.png" type="Texture" id=1]
[ext_resource path="res://bg/006.png" type="Texture" id=2]
[ext_resource path="res://FirstTime.gd" type="Script" id=3]
[ext_resource path="res://bg/cycle_8.shader" type="Shader" id=4]
[ext_resource path="res://story/CharaOverworld.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/SWAP_12_Bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/SWAP_10_Regular.tres" type="DynamicFont" id=7]
[ext_resource path="res://tiles/boxHighlight2x.stylebox" type="StyleBox" id=8]
[ext_resource path="res://tiles/boxWhite2x.stylebox" type="StyleBox" id=9]
[ext_resource path="res://ResizeButton.gd" type="Script" id=10]
[ext_resource path="res://story/effects/portal.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/bg_color = Color( 0, 0, 0, 0 )
shader_param/speed = -0.125
shader_param/palette = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 180, 320 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("MainBox/ColorRect2:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBox/ViewportContainer/TextureViewport/navi:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainBox/ViewportContainer/TextureViewport/portal:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("MainBox/ColorRect2:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "navi_appear"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("MainBox/ViewportContainer/TextureViewport/navi:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 160, -0.25, 0, 0, 0.3, 280, -0.7, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.3 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBox/ViewportContainer/TextureViewport/navi:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainBox/ViewportContainer/TextureViewport/portal:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 2.3, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainBox/ViewportContainer/TextureViewport/portal:frame")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3 ]
}

[node name="FirstTime" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.164706, 0.164706, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = 320.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="MainBox"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureViewport" type="Viewport" parent="MainBox/ViewportContainer"]
size = Vector2( 360, 640 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="MainBox/ViewportContainer/TextureViewport"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="portal" type="Sprite" parent="MainBox/ViewportContainer/TextureViewport"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 180, 294 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
vframes = 4

[node name="navi" parent="MainBox/ViewportContainer/TextureViewport" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 180, 160 )
scale = Vector2( 2, 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="MainBox"]
position = Vector2( 180, 320 )
shape = SubResource( 2 )
shape_centered = false

[node name="ColorRect2" type="ColorRect" parent="MainBox"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = -224.0
grow_horizontal = 0
rect_min_size = Vector2( 256, 96 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 8.0
margin_right = -18.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/VBoxContainer"]
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "I18N_SETUP_SKIP"
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button/VBoxContainer"]
margin_top = 32.0
margin_right = 220.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = ExtResource( 7 )
text = "I18N_SETUP_SKIP_HELP"
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/navi_appear = SubResource( 5 )

[connection signal="pressed" from="MainBox/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Skip_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
